...
    @Published var showBiometricPrompt = false

    @AppStorage("loggedIn") private var loggedIn: Bool = false

    private func validate() -> Bool {
        if username.isEmpty && password.isEmpty {
            errorMessage = "Enter username and password"
        } else if username.isEmpty {
            errorMessage = "Username is required."
        } else if password.isEmpty {
            errorMessage = "Password is required."
        } else {
            errorMessage = nil
            return true
        }

        shouldShowValidationAlert = true
...
